--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
   "recommendations": [
     "editorconfig.editorconfig",
     "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-dutch",
     "redhat.vscode-yaml",
     "mhutchie.git-graph",
     "esbenp.prettier-vscode",
