--- a/.github/workflows/format.yaml
+++ b/.github/workflows/format.yaml
@@ -22,6 +22,9 @@ jobs:
 
   prettier:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      pull-requests: write
 
     steps:
       - name: Checkout repository
@@ -52,13 +55,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Create Pull Request
-        uses: peter-evans/create-pull-request@v7
-        with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          commit-message: "Fix formatting issues"
-          branch: prettier-fix
-          branch-suffix: short-commit-hash
-          title: "Prettier: Fix formatting issues"
-          body: |
-            Fix prettier formattin issues
+      # - name: Create Pull Request
+      #   uses: peter-evans/create-pull-request@v7
+      #   with:
+      #     token: ${{ secrets.GITHUB_TOKEN }}
+      #     commit-message: "Fix formatting issues"
+      #     branch: prettier-fix
+      #     branch-suffix: short-commit-hash
+      #     title: "Prettier: Fix formatting issues"
+      #     body: |
+      #       Fix prettier formattin issues
