Add technical architecture

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,6 +6,8 @@
     "cSpell.words": [
       "ABAC",
       "Collabora",
+      "conftest",
+      "Cyclon",
       "DICTU",
       "ITIL",
       "MBCHAT",
@@ -20,9 +22,11 @@
       "MTBF",
       "MTTR",
       "NSCS",
+      "ollama",
       "OOXML",
       "SCIM",
       "SDLC",
+      "SPDC",
       "Vaultwarden",
       "WCAG"
     ]
